added time.html, time.js(used installed moment.js in it), editted webpack.config.js to get 2 htmls, 2 bundles

--- a/time.html
+++ b/time.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack test project</title>
+  <title>(Time page) Webpack test project</title>
 </head>
 <body>
   <a href="index.html">Index</a>
   <a href="time.html">Time</a>
   <hr>
-  Hello, UKAD! There's the result of calculations (separate function and lodash function):
+  Now is ...
 </body>
 </html>
